--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=task
 server.port=8080
+
+### MongoDB
+spring.data.mongodb.uri=mongodb://<NAME>:<PASS>@<IP>:<PORT>/<DBNAME>
+
+### Minimum acceptable age for registration
+min.user.age=18
